# P1SW25FireSim

./: CMakeLists.txt  MIT LICENSE.md  README.md  main  run.sh
cmake/: mtest.cmake
maps/: GR1_300x300.txt  GR1_300x300_Slope_10deg.txt  GR1_300x300_Slope_15deg.txt  GR1_300x300_Slope_5deg.txt  TU1_300x300.txt
maps/topography/: TL1_topography_300x300.txt  TU1_topography_300X300.txt  data_topography_txt
output/: frame_0001.html  frame_0002.html  frame_0003.html  frame_0004.html  frame_0005.html  frame_0006.html  frame_0007.html  frame_0008.html  frame_0009.html  frame_001.ppm  frame_002.ppm
src/: CMakeLists.txt  Data.txt  TL1_300x300.txt  TU1_300x300.txt  constants-and-enum.h  data_txt  example_library.c  example_library.h  functions.c  functions.h  input-output.c  input-output.h  main.c  simulation.c  simulation.h
test/: CMakeLists.txt  test_example.c  test_functions.c  test_simulations.c
visualizer/: CMakeLists.txt  visualizer.c  visualizer.h
